Tue Jun 20 10:31:00 BST 2000 Olly Betts

	* Removed NearOrPhrasePostList - code shared was negligible

Tue Jun 20 09:38:00 BST 2000 Olly Betts

	* Tweaked some FIXME comments

Mon Jun 19 18:26:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Some work towards getting the Java bindings into the make system.

Mon Jun 19 15:56:00 BST 2000 Olly Betts

	* Updated TODO

Mon Jun 19 15:46:00 BST 2000 Olly Betts

	* Tidied up near/phrase a bit

Mon Jun 19 14:48:00 BST 2000 Olly Betts

	* Fixed languages/porter/.cvsignore

Mon Jun 19 14:30:00 BST 2000 Olly Betts

	* Fixed various typos in ChangeLog and TODO

Mon Jun 19 14:09:00 BST 2000 Olly Betts

	* Improved near1 and phrase1 tests; fixed problems thrown up by more
	  demanding test cases.

Mon Jun 19 13:48:40 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The Python interface now passes the OmBatchEnquire test.

Mon Jun 19 12:55:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added the Porter stemmer (without the recent improvements in the
	  current English stemmer)

Mon Jun 19 13:03:00 BST 2000 Olly Betts

	* SleepyPositionList now asserts !at_end() in get_position()

Fri Jun 16 18:11:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now most of the way through getting a working OmBatchEnquire in
	  Python.

Fri Jun 16 15:43:00 BST 2000 Olly Betts

	* PHRASE now works; added test `phrase1' to apitest

Fri Jun 16 14:57:00 BST 2000 Olly Betts

	* Rearranged to create PhrasePostList (currently a clone of
	  NearPostList).  Shared code is in super classes.

	* `nearpostlist.*' renamed to `phrasepostlist.*'.

	* Fixed warning about declaration vs initialisation order in
	  OmQueryInternal

Fri Jun 16 12:49:00 BST 2000 Olly Betts

	* NEAR now works with distributed searching

Fri Jun 16 11:33:00 BST 2000 Olly Betts

	* NEAR now working; added NEAR test (near1) to apitest

	* OmQueryInternal copy constructor now copies max_weight
