@@ -1,3 +1,7 @@
+Tue Jun 20 11:20:00 BST 2000 Olly Betts
+
+	* apitest now tries to guess srcdir from argv[0] if it isn't in env
+
 Tue Jun 20 10:31:00 BST 2000 Olly Betts
 
 	* Removed NearOrPhrasePostList - code shared was negligible
